--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
                             <h2>CONTACT</h2>
                             <p>Email address:farzanaisack@gmail.com</p>
                             <p>hotmail number:+254707072241</p>
-                            <p>Location:NAIROBI/NAIROBI</p>
+                            <p>Location:NAIROBI/KENYA</p>
                             <br>
                         </div>
                         </section>
