--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
                     <div class="kerry">
                         <h1>WELCOME TO MY PORTFOLIO</h1>
                         <h2>GET TO KNOW FARZANA BETTER</h1>
-                            <!-- <img src="my home image.png" width="400px"> -->
+                            <!-- <img src="farnaz.png" width="400px"> -->
                     </div>
 
                 </div>
@@ -35,7 +35,7 @@
                 <div class="about">
                     <div> 
                        
-                   <img src="farzana.jpg" width="400px" height="400px"></div>
+                   <img src="Farnaz.jpg" width="400px" height="400px"></div>
                    
                     <!-- <aside> -->
                         <div class="joker">                      
