--- a/index.html
+++ b/index.html
@@ -33,9 +33,9 @@
             <div id="about">
                 <h2>ABOUT ME</h2>
                 <div class="about">
-                    <div> 
-                       
-                   <img src="Snapchat-2064572825.jpg" width="300px" height="500px"></div>
+                    <div class="var"> 
+                         <img src="Snapchat-2064572825.jpg" width="300px" height="500px">
+                </div>
                    
                     <!-- <aside> -->
                         <div class="joker">                      
